--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://andrewquitadamo.github.io/cv/assets/cv.pdf" />
+<meta http-equiv="refresh" content="0; url=http://andrewquitadamo.github.io/cv/assets/resume.pdf" />
